--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=34b5b027cd5adc029f043051ec0c4c58"></script>
+      <!-- kakao map api && library -->
+      <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=34b5b027cd5adc029f043051ec0c4c58&libraries=services,clusterer,drawing"></script>
 
 
     <title>React App</title>
